# RSGP

./: justfile  readme.md
.github/workflows/: rs-build.yml
crates/manager/: Cargo.toml
crates/manager/src/: main.rs
crates/manager/src/conf/: loader.rs  structs.rs
crates/manager/src/config/: loader.rs  structs.rs
crates/manager/src/endpoints/: auth.rs  login.rs  mod.rs
crates/manager/src/endpoints/user/: admin.rs  mod.rs  servers.rs  session.rs
crates/manager/src/endpoints/user/admin/: eggs.rs  groups.rs  mod.rs  servers.rs  users.rs  workers.rs
crates/manager/src/endpoints/worker/: mod.rs  servers.rs
crates/manager/src/jwt/: structs.rs
crates/manager/src/utils/: functions.rs  hash.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  structs.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
crates/worker/src/conf/: loader.rs  structs.rs
crates/worker/src/endpoints/: check.rs  mod.rs  servers.rs  setup.rs
web/: package.json  svelte.config.js
web/src/: app.css
web/src/lib/: api.ts  types.ts
web/src/lib/ui/: sidebar.svelte
web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
web/src/routes/admin/: +layout.server.ts  +page.svelte
web/src/routes/admin/eggs/: +page.server.ts
web/src/routes/admin/groups/: +page.server.ts  +page.svelte
web/src/routes/admin/servers/: +page.server.ts  +page.svelte
web/src/routes/admin/settings/: +page.svelte
web/src/routes/admin/users/: +page.server.ts  +page.svelte
web/src/routes/admin/workers/: +page.server.ts  +page.svelte
web/src/routes/login/: +page.server.ts  +page.svelte
web/src/routes/logout/: +page.server.ts
web/src/routes/server/[id]/: +layout.server.ts  +page.server.ts  +page.svelte
web/src/routes/settings/: +page.server.ts  +page.svelte
