[package]
name = "rsgp-manager"
version = "0.1.0"
edition = "2024"
default-run = "rsgp-manager"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "multipart"] }
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
rsgp-shared = { path = "../shared" }
sha2 = "0.10.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["cors", "trace", "tracing"] }
rand = "0.9.1"
base64 = "0.22.1"
