[package]
name = "rsgp-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
rsgp-shared = { path = "../shared" }
axum = { version = "0.8.4", features = ["http2", "macros", "multipart"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["cors", "trace", "tracing"] }
rand = "0.9.1"
base64 = "0.22.1"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
urlencoding = "2.1.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lazy_static = "1.5.0"
